Fix spacing for cv toggle links

--- a/assets/css/cv.css
+++ b/assets/css/cv.css
@@ -26,7 +26,7 @@
 @media print { #main .cv-items .toggle-btn { display: none } }
 #main .cv-items .toggle-btn:hover { color: #a0a0a0 !important; text-decoration: none }
 @media not print {
-	#main .cv-items .toggle-btn + .toggle { margin-top: 5px }
+	#main .cv-items .toggle-btn + .toggle { margin-top: 5px !important }
 	#main .cv-items .item > .content .toggle { margin-left: 8px; padding-left: 1rem; border-left: 2px solid #a0a0a0 } }
 
 #main .cv-items .item { display: flex; margin-bottom: 1rem; align-items: start; justify-content: space-between }
